fix contact spacing

--- a/solution/css/contact.css
+++ b/solution/css/contact.css
@@ -30,7 +30,7 @@
     border-radius: 15px; /* 5px rounded corners */
     display: inline-block;
     background: #eaf6ff;
-    margin: 0 0px;
+    margin: 0 80px;
     flex: 1;
     max-width: 500px;
     max-height: 250px;
